@@ -7,6 +7,7 @@ import com.sprint.mission.discodeit.repository.MessageRepository;
 import org.springframework.stereotype.Repository;
 
 import java.io.*;
+import java.time.Instant;
 import java.util.*;
 import java.util.stream.Collectors;
 
@@ -17,18 +18,8 @@ public class FileMessageRepository implements MessageRepository {
     private static final String FILENAME
             = "D:\\codeit07\\7-sprint-mission\\src\\main\\java\\com\\sprint\\mission\\discodeit\\repository\\file\\message.sav";
 
-    // 임시저장
-    private final Map<UUID, Message> messages = new LinkedHashMap<>();
-
-    //싱글톤
-    private static final FileMessageRepository INSTANCE = new FileMessageRepository();
-
     private FileMessageRepository(){
         loadMessageFromFile();
-    }
-
-    public static FileMessageRepository getInstance(){
-        return INSTANCE;
     }
 
     // 파일 갖고 오기(역직렬화)
@@ -65,44 +56,51 @@ public class FileMessageRepository implements MessageRepository {
         }
     }
 
+    // 임시저장
+    private final Map<UUID, Message> messages = new LinkedHashMap<>();
+
     @Override
-    public void save(Message message) {
-        messages.put(message.getUuid()  , message);
+    public Message save(Message message) {
+        messages.put(message.getUuid(), message);
         saveMessageToFile();
+        return message;
     }
 
     @Override
-    public Message findByMessage(UUID uuid) {
-        return messages.get(uuid);
+    public Optional<Message> findByMessage(UUID uuid) {
+        return Optional.ofNullable(messages.get(uuid));
     }
 
     @Override
-    public List<Message> findUserAll(User userId) {
+    public List<Message> findAll() {
+        return new ArrayList<>(messages.values());
+    }
+
+    @Override
+    public List<Message> findAllByChannelId(Channel channel) {
+        if(channel == null){ return new ArrayList<>(); }
         return messages.values().stream()
-                .filter(m->m.getSenderId().equals(userId.getUuid()))
+                .filter(m->m.getChannelId().equals(channel.getUuid()))
                 .sorted(Comparator.comparing(Message::getCreateAt))
-                .collect(Collectors.toList());
+                .toList();
     }
-
-    public List<Message> findChannelAll(Channel channelId) {
-        return messages.values().stream()
-                .filter(m->m.getChannelId().equals(channelId.getUuid()))
-                .sorted(Comparator.comparing(Message::getCreateAt))
-                .collect(Collectors.toList());
-    }
-
 
     @Override
-    public void updateMessage(UUID uuid, String newMessage) {
-        Message m = messages.get(uuid);
-        if( m != null){
-            m.setInputMsg(newMessage);
-            saveMessageToFile();
-        }
+    public Optional<Instant> findLastByChannel(UUID channelId) {
+        return messages.values().stream()
+                .filter(m->m.getChannelId().equals(channelId))
+                .map(Message::getCreateAt)
+                .max(Comparator.naturalOrder());
+    }
+
+    @Override
+    public void deleteAllByChannelId(UUID channelId) {
+
     }
 
     @Override
     public void deleteMessage(UUID uuid) {
+        Message message = messages.get(uuid);
         messages.remove(uuid);
         saveMessageToFile();
     }
